Fixed wrapping on reviews section

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -242,12 +242,6 @@ ul .dropdown-menu {
     width: 100%;
 }
 
-/* REVIEWS */
-
-.reviews {
-    width: 400px;
-}
-
 /* BAG */
 
 .qty-form input[type="number"] {
